# QEPP

./: .gitignore  CMakeLists.txt  Dockerfile  INSTALL.md  README.md  post_litfix_new_drop_v04.sh  release.sh  run_litfix_new.sh
include/qe/: bader.hpp  band.hpp  charge.hpp  cif.hpp  conv.hpp  dfpt.hpp  dos.hpp  elastic.hpp  help.hpp  mag.hpp  parse.hpp  phonon.hpp  qe_input.hpp  qha.hpp  qha_elastic.hpp  stm.hpp  struct.hpp  types.hpp  utils.hpp
include/qe/cli/: commands.hpp  dispatch.hpp  kpath.hpp
run_si_dos/: si.dos  si_bands.in  si_dos.in  si_nscf.in  si_scf.in
src/: band.cpp  charge.cpp  dos.cpp  elastic.cpp  main.cpp  qe_input.cpp  utils.cpp
src/algorithm/: band.cpp  cif.cpp  dfpt.cpp  dos.cpp  elastic.cpp  harmonic.cpp  qha.cpp  qha_elastic.cpp  struct.cpp  utils.cpp
src/io/: bader.cpp  band.cpp  charge.cpp  conv.cpp  dfpt.cpp  dos.cpp  elastic.cpp  help.cpp  mag.cpp  parse.cpp  phonon.cpp  qha.cpp  qha_elastic.cpp  stm.cpp  struct.cpp
src/io/cli/: bader.cpp  band.cpp  charge.cpp  cif.cpp  conv.cpp  dispatch.cpp  dos.cpp  elastic.cpp  kpath.cpp  mag.cpp  parse.cpp  phonon.cpp  qha.cpp  qha_elastic.cpp  stm.cpp  struct.cpp
src/plot/: band.cpp  charge.cpp  conv.cpp  dos.cpp  phonon.cpp  stm.cpp
tests/artifacts/band/: test_si.bands.dat.gnu  test_si.bands.dat.rap
tests/band_kpath/: si.kpath  si_bands.in  si_bands_pp.in  si_scf_template.in  test_si.bands.dat.gnu  test_si.bands.dat.rap
tests/elastic_al/: elastic_results.txt
tests/elastic_si_low/: elastic_results.txt
tests/elastic_si_prim/: elastic_results.txt
tests/fixtures/cif/: test_si.cif
tests/fixtures/qe-input/: al_elastic_low.in  si_elastic_low.in  si_prim_elastic.in  test_si.scf.in
tests/sro_validation/: b2_cscl.in  b2_cscl.sro.txt  b2_cscl.struct.txt  l10_fcc.in  l10_fcc.sro.txt  l10_fcc.struct.txt  random_bcc_8A8B.in  random_bcc_8A8B.sro.txt  random_bcc_8A8B.struct.txt  random_sc_16A16B.in  random_sc_16A16B.sro.txt  random_sc_16A16B.struct.txt
